cfn-template.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: Roman Numerals Converter Flask Application

Parameters:
  KeyPairName:
    Description: Name of an existing EC2 KeyPair
    Type: AWS::EC2::KeyPair::KeyName

  LatestAmiId:
    Description: Latest Amazon Linux 2023 AMI
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ami-amazon-linux-latest/al2023-ami-kernel-default-x86_64

Resources:
  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow HTTP and SSH
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

  WebServer:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref LatestAmiId
      InstanceType: t3.micro
      KeyName: !Ref KeyPairName
      SecurityGroupIds:
        - !GetAtt WebServerSecurityGroup.GroupId

      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          dnf update -y
          dnf install -y git python3-pip

          cd /home/ec2-user
          git clone https://github.com/sm2021praktikum/roman-numerals-converter.git

          cd roman-numerals-converter
          pip3 install flask

          nohup python3 app.py > /var/log/roman-app.log 2>&1 &

      Tags:
        - Key: Name
          Value: !Sub "Web Server of ${AWS::StackName}"

Outputs:
  WebsiteURL:
    Description: Roman Numerals Converter Website
    Value: !Sub "http://${WebServer.PublicIp}"
